Fix spacing at bottom of profile cards

--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -49,9 +49,13 @@ footer {
     margin-bottom: 30px;
 }
 
-.profile__name, .profile__interests, .profile__name {
-    width: 80%;
+.profile__name, .profile__interests, .profile__courses {
+    width: 90%;
     text-align: center;
+}
+
+.profile__courses {
+    margin-bottom: 20px;
 }
 
 .save__button--bordered {
