--- a/public/css/profile.scss
+++ b/public/css/profile.scss
@@ -45,8 +45,8 @@ footer {
     margin-bottom: 30px;
 }
 
-.profile__name, .profile__interests, .profile__name {
-    width: 80%;
+.profile__name, .profile__interests, .profile__courses {
+    width: 90%;
     text-align: center;
 }
 
